kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: flask-app
  labels:
    app: flask-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: flask-app
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-nodeport
  namespace: flask-app
  labels:
    app: flask-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: flask-app
